SpeedCrunch post-0.9
---------------------
New features:
  preliminary support of logic functions
  extended output of real-valued numbers to non-decimal modes
  arithmetic integer divide and modulo

New functions:
  ERF: the normalized error function (related to normal distribution)
  ERFC: the complementary error function
  GAMMA: the extension of the factorials (x-1)!
  LNGAMMA: ln(abs(Gamma(x)))

Improvements and bug fixes:
  Fixed loss of precision on variable saving
  Fixed clobbering of ans on radix change
  improved binomCdf evaluation allows n to be around 20000 now
  testevaluator independent of locale (does not use ',' any more)
  bugfix in the math engine (float_frac) that could cause memory corruption

SpeedCrunch 0.9
---------------------
New features:
  greatly extended number range
  factorials extended to real values
  stay always-on-top (#106)

New functions:
  ARSINH: area hyperbolic sine, the reverse of sinh
  ARCOSH: area hyperbolic cosine, the reverse of cosh
  ARTANH: area hyperbolic tangent, the reverse of tanh

Improvements and bug fixes:
  replaced the math engine,
    solving issue #53, #78, #98,
    preparing a solution for issue #16, #62, #90,
    better support for issue #47
    uniform and predictable accuracy
    correct rounding (2.5 is rounded to 2 [even last digit rule])
    stable algorithms covering the whole range of numbers
    faster evaluation of higher mathematical function (factor 9 on the average)
    supports stable evaluation of basic higher functions near poles and zeros
    built-in support of conversion of all (integer, real, huge, tiny) values to other bases
    built-in support of logic operations
    built-in support of the missing area hyperbolic functions
    built-in support of a new class of functions, Gamma and friends
  fixed incorrect evaluation of GEOMEAN
  fixed dependency of sinh, cosh, tanh on degree setting
  extended TRUNC to the new range of exponents. In addition, TRUNC accepts a negative